tests/ui/intrinsics/bad-intrinsic-monomorphization-bounds.stderr
error[E0277]: the trait bound `Foo: intrinsics::bounds::FloatPrimitive` is not satisfied
  --> $DIR/bad-intrinsic-monomorphization-bounds.rs:16:5
   |
LL |     intrinsics::fadd_fast(a, b)
   |     ^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the nightly-only, unstable trait `intrinsics::bounds::FloatPrimitive` is not implemented for `Foo`
  --> $DIR/bad-intrinsic-monomorphization-bounds.rs:13:1
   |
LL | pub struct Foo(i64);
   | ^^^^^^^^^^^^^^
help: the following other types implement trait `intrinsics::bounds::FloatPrimitive`
  --> $SRC_DIR/core/src/intrinsics/bounds.rs:LL:COL
   |
   = note: `f16`
  ::: $SRC_DIR/core/src/intrinsics/bounds.rs:LL:COL
   |
   = note: `f32`
  ::: $SRC_DIR/core/src/intrinsics/bounds.rs:LL:COL
   |
   = note: `f64`
  ::: $SRC_DIR/core/src/intrinsics/bounds.rs:LL:COL
   |
   = note: `f128`
note: required by a bound in `fadd_fast`
  --> $SRC_DIR/core/src/intrinsics/mod.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
